translated  projects description

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -10,5 +10,11 @@
     "close": "Close",
     "learnMore": "Learn more"
   },
-  "projects": {}
+  "projects": {
+    "rbk": "Rbk was my first introduction to the world of programming and I loved every second of it, their way of teaching was \"Learn how to learn\", as the world of programming is evolving very fast, learning a specific technology is bound to make you obsolete and so you need to keep an open mind and keep learning. Not only developping my technical skills but also my emotional intelligence and stress management as well, Rbk really helped optimize our integration in the professional life.",
+    "adrissa": "After getting my fullStack certificate from rbk I immediatly tried to look for opportunities, and I found a freelance project through one of my former professors, so I immedialty started working on Adrissa, a website that displays local hangout places with reviews, map and search feature. Unfortunetly this project never seen a public release but it was a good learning experience for me.",
+    "euromedi": "Euromedi is an international accreditation for clinics, hospitals, retirement homes and more..., I worked closely with doctors to realize a private application that was part of this accreditation package. the application is mostly designed for tablets as institution personnels carry them around and complete diffrent tasks related to the accreditation and I'am proud to to know that I was part of making the health system somewhat better as the application is in production since 2022. Until today I'm still developping new projects for euromedi remotely.",
+    "insight": "Insight plus is a fintech startup based in Tunisia. This was my first experience in a development company, we specialize in making tools for exchange operators and more. We also partnered up with national banks for a currency marketplace platform and we plan to expand our partnership in the near future.",
+    "ataa": "Ataa is a mobile app that allows you to connect associations with volunteers, as it's described its a noble effort to help those in need, and I'm proud to work on it's design, backend as well as a feature complete admin dashboard with statistics and basic admin funcionalities. Currently not released to the public but we fully intend on releasing it in the near future."
+  }
 }
