About section overhaul & fixes

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,10 @@
 {
   "bio": "Hey there.<br />Thanks for checking out my portfolio, I'm delighted to introduce you to my web/mobile development career in which I take great pride and joy. <br />I'm currently {0} years old residing in Tunisia and employed full-time at a rapidly growing startup but also working as a freelancer for various clients, as for my hobbies I'm a geek at heart, since the age of 8 I always loved computers and video games.",
+  "intro": {
+    "1": "I design and create with <span class='emphasize-text'>passion</span>, I love a good modern sleek aesthetic that's easy on the eyes, I always seek perfection and <span class=\"emphasize-text\">satisfaction</span> for my clients but also for myself.",
+    "2": "<span class='emphasize-text'>Responsive design</span> is a challenge I love to tackle, finding solutions to make the user's experience fluid for any device without compromise.",
+    "3": "Behind every smooth interface is a powerful engine. <br />I craft <span class=\"emphasize-text\">scalable</span>, secure, and efficient backends, ensuring that <span class=\"emphasize-text\">performance</span> and logic work hand in hand. <br />Clean architecture, seamless APIs, and well-structured data flow, I aim for more than just functionality — I aim for elegance beneath the surface."
+  },
   "sections": {
     "about": "About",
     "skills": "Skills",
