--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -1,5 +1,10 @@
 {
   "bio": "Bonjour.<br />Merci d'avoir consulté mon portfolio, je suis ravi de vous présenter ma carrière de développeur web/mobile dont je suis très fier et heureux. <br />J'ai actuellement {0} ans, je réside en Tunisie et je suis employé à temps plein dans une startup en croissance rapide mais je travaille également en freelance pour divers clients, quant à mes passe-temps, je suis un geek dans l'âme, depuis l'âge de 8 ans, j'ai toujours aimé les ordinateurs et les jeux vidéo.",
+  "intro": {
+    "1": "Je conçois et crée avec <span class='emphasize-text'>passion</span>, j'adore une esthétique moderne et épurée qui soit agréable à l'œil. Je recherche toujours la perfection et la <span class=\"emphasize-text\">satisfaction</span> de mes clients, mais aussi la mienne.",
+    "2": "Le <span class='emphasize-text'>design responsive</span> est un défi que j'aime relever, trouver des solutions pour rendre l'expérience utilisateur fluide sur tous les appareils sans compromis.",
+    "3": "Derrière chaque interface fluide se cache un moteur puissant. <br />Je conçois des backends <span class=\"emphasize-text\">évolutifs</span>, sécurisés et efficaces, en veillant à ce que la <span class=\"emphasize-text\">performance</span> et la logique fonctionnent main dans la main. <br />Clean architecture, APIs fluides et flux de données bien structurés, je vise plus que la simple fonctionnalité — je vise l'élégance sous la surface."
+  },
   "sections": {
     "about": "A propos",
     "skills": "Compétences",
